[package]
name = "tokiotrainning"
version = "0.1.0"
authors = ["Leonardo Vilela Pinheiro <leonardo@vilelapinheiro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
mini-redis = "0.2"
bytes = "0.5"
futures = "0.3.6"
crossbeam = "0.7"

[[example]]
name = "hello-redis"
path = "src/hello-redis.rs"

[[example]]
name = "minitokio"
path = "src/minitokio.rs"